src/styles/style.css
/** CSS STYLE **/
:root {
  --white: #fff;
  --semi-white: #d7ccc0;
  --light: #f5f4f0;
  --main: #fe8a02;
  --main-dark: #42413c;
  --dark: #2a2626;
  --semi-dark: #908d8b;
  --brown: #b09a81;
  --blue: #1085c5;
}

body {
  margin: 0;
  color: var(--dark);
  font-size: 16px;
  font-family: 'Open Sans', sans-serif;
  line-height: 1.6em;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
  font-family: 'Neucha', cursive;
  line-height: 1.2em;
}

h1 {
  font-size: 72px;
}

h2 {
  font-size: 60px;
}

h3 {
  font-size: 34px;
}

.wrapper {
  width: 1110px;
  margin: 0 auto;
  padding-top: 100px;
  padding-bottom: 100px;
}

.txt-main {
  color: var(--main);
}

.txt-center {
  text-align: center;
}

.pt-200 {
  padding-top: 200px;
}

.bg {
  position: relative;
  z-index: 0;
  background-color: var(--light);
}

.bg-brown {
  color: var(--white);
  background-color: var(--brown);
}

.bg::before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  background-image: url(../assets/background.png);
  background-repeat: no-repeat;
  background-size: cover;
  opacity: 0.1;
  content: ' ';
}

.programmer-illustration {
  position: absolute;
  top: 55px;
  right: -104px;
  z-index: -1;
  height: 525px;
}

.flex {
  display: flex;
  justify-content: space-between;
}

.flex-wrap {
  flex-wrap: wrap;
}

.bias-description-block {
  margin-top: 185px;
}

.bias-description-column {
  width: 540px;
}

.btn {
  display: inline-block;
  margin-top: 40px;
  padding-top: 12px;
  padding-right: 24px;
  padding-bottom: 12px;
  padding-left: 24px;
  color: var(--white);
  font-weight: 700;
  text-transform: uppercase;
  text-decoration: none;
  background-color: var(--main);
}

.video-overlap {
  position: relative;
  bottom: -100px;
  padding-top: 0;
  padding-bottom: 0;
}

.video-title {
  margin-bottom: 30px;
}

.video-description {
  margin-bottom: 30px;
}

.video {
  display: block;
  margin: 0 auto;
  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
}

.all-biases {
  background-color: var(--main-dark);
}

.all-biases-title {
  display: block;
  box-sizing: border-box;
  width: 350px;
}

.all-biases-title h2 {
  color: white;
  font-size: 52px;
}

.bias-block {
  display: block;
  box-sizing: border-box;
  width: 350px;
  margin-bottom: 20px;
  padding: 24px;
  color: var(--dark);
  text-decoration: none;
  background-color: var(--light);
}

.bias-block p {
  margin-bottom: 0;
}

.bias-block:hover {
  background-color: var(--white);
}

.bias-number {
  display: block;
  padding-bottom: 40px;
  color: var(--main-dark);
  font-size: 64px;
  font-family: 'Neucha', cursive;
  line-height: 1;
}

.bias-illustration {
  flex-shrink: 0;
  filter: drop-shadow(0 16px 32px rgba(0, 0, 0, 0.15));
}

.bias-illustration img {
  max-width: 100%;
  height: auto;
  vertical-align: middle;
}

.bias-header-right {
  padding-left: 30px;
}

.bias-header-left {
  padding-right: 30px;
}

.bias-subheader {
  display: block;
  font-size: 24px;
  font-family: 'Neucha', cursive;
}

.bias-subheader-dark {
  color: var(--semi-dark);
}

.bias-subheader-light {
  color: var(--semi-white);
}

.bias-header h2 {
  font-weight: 400;
}

.bias-header > p {
  font-size: 34px;
  font-family: 'Neucha', cursive;
  line-height: 1.2;
}

.bias-traits {
  margin-top: 100px;
}

.bias-traits-header {
  box-sizing: border-box;
  margin-bottom: 20px;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 10px;
  font-size: 16px;
  font-family: 'Open Sans', sans-serif;
  line-height: 1.6em;
  text-transform: uppercase;
}

.bias-traits-header-dark {
  color: var(--white);
  background-color: var(--brown);
}

.bias-traits-header-light {
  color: var(--brown);
  background-color: var(--white);
}

.bias-traits p {
  margin-bottom: 0;
}

.feedback-form {
  align-items: center;
  padding-top: 38px;
  padding-right: 55px;
  padding-bottom: 38px;
  padding-left: 55px;
  color: var(--white);
  background-color: var(--main-dark);
}

.feeback-form-header {
  margin-right: 122px;
  font-weight: 400;
  font-size: 34px;
}

.feedback-form-field {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

.feedback-form-field label {
  margin-bottom: 8px;
  font-size: 18px;
}

.feedback-form-field input {
  flex-grow: 1;
  box-sizing: border-box;
  height: 50px;
  padding: 15px;
  border: 0;
}

.feedback-form-field button {
  position: relative;
  box-sizing: border-box;
  width: 70px;
  height: 50px;
  background-color: var(--main);
  border: 0;
}

.feedback-form-field button::before {
  position: absolute;
  top: 13px;
  left: 23px;
  display: block;
  width: 24px;
  height: 24px;
  background-image: url(../assets/send.svg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  content: '';
}

.feedback-form-field p {
  font-size: 12px;
}

.feedback-form-field a {
  color: var(--white);
}

.contacts {
  margin-top: 60px;
  font-size: 14px;
  text-align: center;
}

.contacts a {
  color: --var(blue);
}

